layout issues fixes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,6 +120,10 @@
 }
 
 @layer base {
+  html,
+  body {
+    height: 100%;
+  }
   * {
     @apply border-border outline-ring/50;
   }
